--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,8 @@
     "noUnusedParameters": true,
     "skipLibCheck": true,
 
+    "noImplicitThis":true,
+
     "paths": {
       "@graphql-tools/*-loader": ["packages/loaders/*/src/index.ts"],
       "@graphql-tools/*": ["packages/*/src/index.ts"]
