--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,7 @@
     "noImplicitThis":true,
     "strictBindCallApply": true,
     "strictFunctionTypes": true,
+    "strictNullChecks": true,
 
     "paths": {
       "@graphql-tools/*-loader": ["packages/loaders/*/src/index.ts"],
